--- a/CookPopularControl/Themes/CheckBoxStyle.xaml
+++ b/CookPopularControl/Themes/CheckBoxStyle.xaml
@@ -8,12 +8,17 @@
     </ResourceDictionary.MergedDictionaries>
 
 
-    <Style x:Key="DefaultCheckBoxStyle"  TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxBaseStyle}">
+    <Style x:Key="DefaultCheckBoxStyle" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource CheckBoxBaseStyle}">
         <Setter Property="assistant:CheckBoxAssistant.FillBrush" Value="{DynamicResource DefaultBackground}" />
         <Setter Property="assistant:CheckBoxAssistant.FillThickness" Value="1" />
         <Setter Property="assistant:CheckBoxAssistant.FillType" Value="Check" />
         <Setter Property="assistant:CheckBoxAssistant.FillSize" Value="30" />
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="1" />
+    </Style>
+
+    <Style x:Key="DefaultSwitchControlStyle" TargetType="{x:Type assistant:SwitchControl}" BasedOn="{StaticResource SwitchControlBaseStyle}">
+        <Setter Property="SwicthCloseBackground" Value="{DynamicResource UnEnabledColor}" />
+        <Setter Property="SwitchOpenBackground" Value="{DynamicResource PrimaryColorTheme}" />
     </Style>
 
 </ResourceDictionary>
